adc autentificacao, retornando json com token e armazenando no localStorage

--- a/ExerciciosJavaScript/Aulas SENAI/XMLandFetchRequisicao.html
+++ b/ExerciciosJavaScript/Aulas SENAI/XMLandFetchRequisicao.html
@@ -119,7 +119,7 @@
             headers: {
                 'Content-Type': 'application/json'
             },
-            // Corpo da requisição, aqui fica o objeto que sera enviado. Converte para string para ser interpretado como json (precisa mermo?)
+            // Corpo da requisição, aqui fica o objeto que sera enviado. Converte para string para ser interpretado como json (precisa mermo?) PRECISA, Fetch não converte automatico, axios sim
             body: JSON.stringify(loginData)
         }
 
